[sonar][issues - *] [V02]: Se corrigen varías issues.